--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="/">Home</a></li>
-                        <li><a href="aboutUs.html">About Us</a></li>
+                        <li><a href="/aboutUs">About Us</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
@@ -56,16 +56,9 @@
             </nav>
         </header>
 
-        <div ng-view>
-        </div>
 
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+
+
         <script src="js/materialize.min.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/ng-cordova.min.js"></script>
