--- a/www/index.html
+++ b/www/index.html
@@ -46,11 +46,17 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/aboutUs">About Us</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
+                        <li><a href="viewTransactions.html">View Transactions</a> </li>
+                        <li><a href="addDeposit.html">Add Deposit</a> </li>
+                        <li><a href="about.html">About</a> </li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
                         <li><a href="main.html">Home</a></li>
                         <li><a href="aboutUs.html">About Us</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
+                        <li><a href="viewTransactions.html">View Transactions</a> </li>
+                        <li><a href="addDeposit.html">Add Deposit</a> </li>
+                        <li><a href="about.html">About</a> </li>
                     </ul>
                 </div>
             </nav>
