--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/material%20icons/material-icons.css">
         <title>Fin-Hack</title>
     </head>
     <body>
@@ -51,24 +52,19 @@
                         <li><a href="about.html">About</a> </li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
-                        <li><a href="main.html">Home</a></li>
-                        <li><a href="aboutUs.html">About Us</a></li>
-                        <li><a href="contactUs.html">Contact Us</a></li>
-                        <li><a href="viewTransactions.html">View Transactions</a> </li>
-                        <li><a href="addDeposit.html">Add Deposit</a> </li>
-                        <li><a href="about.html">About</a> </li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./templates/viewTransactions.html">View Transactions</a> </li>
+                        <li><a href="./templates/addDeposit.html">Add Deposit</a> </li>
+                        <li><a href="./templates/about.html">About</a> </li>
                     </ul>
                 </div>
             </nav>
         </header>
 
-
-
-
+        <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
         <script src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/ng-cordova.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
     </body>
 </html>
