--- a/www/index.html
+++ b/www/index.html
@@ -44,16 +44,18 @@
                     <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="/">Home</a></li>
+                        <li><a href="/home.html">Home</a></li>
                         <li><a href="/aboutUs">About Us</a></li>
                         <li><a href="contactUs.html">Contact Us</a></li>
                         <li><a href="viewTransactions.html">View Transactions</a> </li>
+                        <li><a href="addExpense.html">Add Expense</a> </li>
                         <li><a href="addDeposit.html">Add Deposit</a> </li>
                         <li><a href="about.html">About</a> </li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
-                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./home.html">Home</a></li>
                         <li><a href="./templates/viewTransactions.html">View Transactions</a> </li>
+                        <li><a href="addExpense.html">Add Expense</a> </li>
                         <li><a href="./templates/addDeposit.html">Add Deposit</a> </li>
                         <li><a href="./templates/about.html">About</a> </li>
                     </ul>
