--- a/www/index.html
+++ b/www/index.html
@@ -45,8 +45,7 @@
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="/home.html">Home</a></li>
-                        <li><a href="/aboutUs">About Us</a></li>
-                        <li><a href="contactUs.html">Contact Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="viewTransactions.html">View Transactions</a> </li>
                         <li><a href="addExpense.html">Add Expense</a> </li>
                         <li><a href="addDeposit.html">Add Deposit</a> </li>
