--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: *; style-src *; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -51,6 +52,7 @@
                         <li><a href="about.html">About</a> </li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
+                        <li><a href="./templates/login.html">Login</a></li>
                         <li><a href="./home.html">Home</a></li>
                         <li><a href="./templates/viewTransactions.html">View Transactions</a> </li>
                         <li><a href="addExpense.html">Add Expense</a> </li>
@@ -64,7 +66,7 @@
         <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
         <script src="js/materialize.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/common.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
     </body>
 </html>
